# rust-messagebox-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/03-peerpay/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-websocket-live-messaging/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-overlay-device-registration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-parity-verification/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md
.planning/phases/07-brc-103-websocket-auth-transport/: 07-02-SUMMARY.md
.planning/phases/08-e2e-websocket-payment-validation/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: comms_layer.rs  live_messaging.rs  payments.rs  send_message.rs
src/: adapter.rs  client.rs  delivery.rs  encryption.rs  error.rs  host_resolution.rs  http_ops.rs  lib.rs  payment_requests.rs  peer_pay.rs  permissions.rs  socket_transport.rs  types.rs  websocket.rs
tests/: integration.rs  live_server.rs  parity.rs
