[package]
name = "bsv-messagebox-client"
version = "0.1.5"
edition = "2021"
rust-version = "1.87"
description = "BSV MessageBox client — peer-to-peer messaging and payments with BRC-78 encryption, WebSocket live delivery, and overlay host resolution. Full parity with @bsv/message-box-client."
license-file = "LICENSE"
repository = "https://github.com/b1narydt/rust-messagebox-client"
keywords = ["bsv", "blockchain", "messaging", "p2p", "bitcoin"]
categories = ["cryptography", "network-programming"]

[lib]
name = "bsv_messagebox_client"

[dependencies]
# Shared BRC-103 Socket.IO transport (extracted from this crate's websocket.rs
# + socket_transport.rs). Published on crates.io; the [patch.crates-io] bsv-sdk
# pin below redirects its bsv-sdk 0.3.1 to the graph's git rev (one copy).
authsocket = { version = "0.1.0", features = ["client"] }
# Pinned to the same 0.3 git rev as rust-mpc and the authsocket crate so one
# bsv-sdk package (AuthMessage/Peer/WalletInterface) is shared across the graph.
bsv-sdk = { git = "https://github.com/b1narydt/bsv-rust-sdk.git", rev = "2fcd15b56fe61acf4f63f76becf45e7182b33dc5", features = ["network"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
async-trait = "0.1"
thiserror = "2"
rust_socketio = { version = "0.6", features = ["async"] }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"


# authsocket (crates.io) declares bsv-sdk = "0.3.1"; this crate depends on the
# git rev directly. Without this patch the two resolve as separate copies and
# their WalletInterface/AuthMessage/Peer types don't unify. Redirect the
# crates.io bsv-sdk to the same git rev the whole graph pins → one shared copy.
[patch.crates-io]
bsv-sdk = { git = "https://github.com/b1narydt/bsv-rust-sdk.git", rev = "2fcd15b56fe61acf4f63f76becf45e7182b33dc5" }
