[package]
name = "bsv-messagebox-client"
version = "0.1.6"
edition = "2021"
rust-version = "1.87"
description = "BSV MessageBox client — peer-to-peer messaging and payments with BRC-78 encryption, WebSocket live delivery, and overlay host resolution. Full parity with @bsv/message-box-client."
license-file = "LICENSE"
repository = "https://github.com/b1narydt/rust-messagebox-client"
keywords = ["bsv", "blockchain", "messaging", "p2p", "bitcoin"]
categories = ["cryptography", "network-programming"]

[lib]
name = "bsv_messagebox_client"

[dependencies]
# Shared BRC-103 Socket.IO transport (extracted from this crate's websocket.rs
# + socket_transport.rs).
authsocket = { version = "0.1.0", features = ["client"] }
# crates.io 0.3.2: TS-parity auth session recovery + the p-prefix fix. authsocket
# declares bsv-sdk ^0.3.1, so both resolve to one shared 0.3.2 copy — no patch.
bsv-sdk = { version = "0.3.2", features = ["network"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
async-trait = "0.1"
thiserror = "2"
rust_socketio = { version = "0.6", features = ["async"] }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
